--- a/Task1/index.html
+++ b/Task1/index.html
@@ -45,9 +45,9 @@
             <li><a href="/index.html" rel="noindex"> Запрещенная ссылка для индексации поисковиками </a></li>
             <li>Нумерованный список ссылок с подписями title:
                 <ol>
-                    <li><a href="/link1"> Ссылка 1 </a></li>
-                    <li><a href="/link2"> Ссылка 2 </a></li>
-                    <li><a href="/link3"> Ссылка 3 </a></li>
+                    <li><a href="/link1" title="Первая ссылка">Ссылка 1</a></li>
+                    <li><a href="/link2" title="Вторая ссылка">Ссылка 2</a></li>
+                    <li><a href="/link3" title="Третья ссылка">Ссылка 3</a></li>
                 </ol>
             </li>
             <li><a href="ftp://student:2024@ftp.kubsu.ru/public/assignment.pdf"> Ссылка на файл на сервере FTP с авторизацией </a></li>
@@ -139,3 +139,4 @@
     </body>
 
 </html>
+
