--- a/Task1/index.html
+++ b/Task1/index.html
@@ -23,7 +23,7 @@
             <li><a href="about/aboutus.html"> Относительная ссылка на страницу в каталоге about </a></li>
             <li><a href="../index.html"> Относительная ссылка на страницу в каталоге уровнем выше текущего </a></li>
             <li><a href="../../index.html"> Относительная ссылка на страницу в каталоге двумя уровнями выше </a></li>
-            <li><a href="#a1"> Контекстная ссылка </a> в тексте абзаца </li>
+            <li><a href="#link"> Контекстная ссылка </a> в тексте абзаца </li>
             <li><a href="https://www.kubsu.ru/ru/fktipm/prikladnaya-informatika-iskusstvennyy-intellekt-i-mashinnoe-obuchenie#zone-footer"> Ссылка на фрагмент страницы стороннего сайта </a></li>
 
             <li><p> Ссылки из прямоугольных и круглых областей картинки (HTML-тег map):
@@ -137,4 +137,5 @@
                    value="Сохранить">
         </form>    
     </body>
+
 </html>
