--- a/Task1/index.html
+++ b/Task1/index.html
@@ -105,7 +105,7 @@
             
             <label>
                 Любимый язык программирования: <br>
-                <select name="language"
+                <select name="language[]"
                         multiple="multiple">
                     <option  selected="selected"> Pascal </option>
                     <option> C </option>
@@ -139,3 +139,4 @@
     </body>
 
 </html>
+
