--- a/Task2/index.html
+++ b/Task2/index.html
@@ -130,7 +130,7 @@
                     
                     <label>
                         Любимый язык программирования: <br>
-                        <select name="language" multiple>
+                        <select name="language[]" multiple>
                             <option selected>Pascal</option>
                             <option>C</option>
                             <option>C++</option>
@@ -167,4 +167,5 @@
         </div>
     </footer>
 </body>
+
 </html>
