--- a/Task1/index.html
+++ b/Task1/index.html
@@ -123,7 +123,7 @@
 
             <label>
                 Биография <br>
-                <textarea name="field-name-3" placeholder="Напишите о себе"> </textarea>
+                <textarea name="about me" placeholder="Напишите о себе"> </textarea>
             </label> <br>
 
             <label>
@@ -139,4 +139,5 @@
     </body>
 
 </html>
+
 
