--- a/Task2/index.html
+++ b/Task2/index.html
@@ -147,7 +147,7 @@
 
                     <label>
                         Биография <br>
-                        <textarea name="biography" placeholder="Напишите о себе"></textarea>
+                        <textarea name="about me" placeholder="Напишите о себе"></textarea>
                     </label><br>
 
                     <label>
@@ -169,4 +169,5 @@
 </body>
 
 </html>
+
 
