--- a/Task2/index.html
+++ b/Task2/index.html
@@ -44,7 +44,7 @@
                     <li><a href="about/aboutus.html">Относительная ссылка на страницу в каталоге about</a></li>
                     <li><a href="../index.html">Относительная ссылка на страницу в каталоге уровнем выше текущего</a></li>
                     <li><a href="../../index.html">Относительная ссылка на страницу в каталоге двумя уровнями выше</a></li>
-                    <li><a href="#a1">Контекстная ссылка</a> в тексте абзаца</li>
+                    <li><a href="#link">Контекстная ссылка</a> в тексте абзаца</li>
                     <li><a href="https://www.kubsu.ru/ru/fktipm/prikladnaya-informatika-iskusstvennyy-intellekt-i-mashinnoe-obuchenie#zone-footer">Ссылка на фрагмент страницы стороннего сайта</a></li>
                     <li>
                         <p>Ссылки из прямоугольных и круглых областей картинки (HTML-тег map):
@@ -150,7 +150,7 @@
                     
                     <label>
                         Любимый язык программирования: <br>
-                        <select name="language" multiple>
+                        <select name="language[]" multiple>
                             <option selected>Pascal</option>
                             <option>C</option>
                             <option>C++</option>
@@ -188,6 +188,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
