--- a/Task4/index.html
+++ b/Task4/index.html
@@ -19,15 +19,11 @@
             background-color: #3498db;
             color: white;
         }
-        
-        .table-custom tbody tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
     </style>
 </head>
 <body>
     <header class="custom-dark text-white">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex align-items-center py-3">
                 <div class="me-3">
                     <a href="#">
@@ -37,7 +33,7 @@
                     </a>
                 </div>
                 <h1 class="mb-0 fs-4">Учебный сайт</h1>
-                <nav class="ms-auto d-none d-md-block">
+                <nav class="d-none d-md-block position-absolute end-0 top-0 pe-2">
                     <div class="d-flex gap-3">
                         <a href="#links" class="text-white text-decoration-none">Ссылки</a>
                         <a href="#table" class="text-white text-decoration-none">Таблица</a>
@@ -66,7 +62,7 @@
         <section id="table" class="bg-white rounded p-4 mb-4 shadow-sm order-1 order-md-2">
             <h2 class="mb-3">Таблица</h2>
             <div class="table-responsive">
-                <table class="table table-bordered table-custom">
+                <table class="table table-striped table-custom table-bordered">
                     <tr>
                         <th rowspan="2" class="align-middle">Колонка 1</th>
                         <th colspan="2" class="text-center">Группа колонок</th>
@@ -230,7 +226,7 @@
     </div>
 
     <footer class="custom-dark text-white py-3 mt-4">
-        <div class="container">
+        <div class="container-fluid">
             <p class="mb-0">Мостивенко 21/2</p>
         </div>
     </footer>
